월간 학사 일정 조회 API 구현 Branch: feature/schedules #4
